# rust-sdk

./: Cargo.toml  LICENSE  README.md
src/: client.rs  errors.rs  lib.rs  main.rs  requests.rs  utils.rs
tests/: api.rs  blocking_api.rs  utils.rs
